--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">opt_verification</string>
+    <string name="app_name">One Stop</string>
 
     <array name="work">
         <item>Dusting</item>
