--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,19 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    
+    <string-array name="pending">
+
+        <item>Upcoming</item>
+        <item>Expired</item>
+
+    </string-array>
+
+    <string-array name="confirmed">
+
+        <item>Upcoming</item>
+        <item>Completed</item>
+
+    </string-array>
 
 </resources>
